[package]
name = "zdex"
version = "0.3.1"
authors = ["blakehawkins"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Z-indexes bit-collections into a packed Vob"
homepage = "https://github.com/blakehawkins/zdex"
documentation = "https://docs.rs/zdex/"
repository = "https://github.com/blakehawkins/zdex"
readme = "README.md"

[dependencies]
bit_collection = "0.2.3"
vob = "2.0.4"
